Expand readme and update npm packages

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "html5-project",
+  "name": "purescript-project",
   "version": "0.1.0",
-  "description": "HTML5 project template using npm, bower, and gulp.",
+  "description": "A PureScript project starter template using Gulp and browser LiveReload.",
   "author": "John Mendonca",
-  "repository": "https://github.com/johnmendonca/html5-project",
+  "repository": "https://github.com/johnmendonca/purescript-project",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^14.1.0",
-    "coffee-script": "^1.12.2",
+    "browserify": "^14.4.0",
+    "coffee-script": "^1.12.7",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-purescript": "^2.0.0",
-    "gulp-sass": "^3.0.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.2",
     "main-bower-files": "^2.13.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
