--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "purescript-console": "^3.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^3.0.0",
+    "purescript-random": "^3.0.0",
+    "purescript-unfoldable": "^3.0.0"
   }
 }
