--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "main-bower-files": "^2.13.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
