--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,9 @@
     "purescript-dom": "^4.8.1",
     "purescript-smolder-dom": "^2.0.0",
     "purescript-foldable-traversable": "^3.6.0",
-    "purescript-pux": "^11.0.0"
+    "purescript-pux": "^11.0.0",
+    "purescript-css": "^3.1.0",
+    "purescript-datetime": "^3.3.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0"
